# pywhois2

./: .dockerignore  Dockerfile  README.md  TEMPLATE_COVERAGE.md  pyproject.toml  setup.py
.github/scripts/: run_ci.sh
.github/workflows/: create_release.yml  publish.yml  test.yml
example/: example.py
pywhois2/: __init__.py  common.py  whois.py  whois_request.py
pywhois2/data/: cctld.yml  data.yml
pywhois2/templates/: ae.tpl  afnic.tpl  ai.tpl  am.tpl  cn.tpl  common.tpl  common.ttp  common_iana.ttp  common_relay.tpl  jp.tpl  jp.ttp  kr.tpl  uk.tpl  xx.jp.tpl  xx.jp.ttp
pywhois2/templates/cctld/: ge.tpl  hk.tpl  id.tpl  il.tpl  is.tpl  nu.tpl  tw.tpl
scripts/: audit_templates.py
tests/: test_common.py  test_end_to_end.py  test_jp.py  test_package.py  test_templates.py
tests/fixtures/: ad_no_match.txt  co_jp_whois.txt  com_no_match.txt  google_co_kr_whois.txt  google_com_whois.txt  jp_no_match.txt  jp_whois.txt  kr_no_match.txt  nic_uk_whois.txt  org_no_match.txt
